--- a/capp/package.json
+++ b/capp/package.json
@@ -11,13 +11,16 @@
     "license": "Apache-2.0",
     "dependencies": {
         "cordova-android": "^7.0.0",
+        "cordova-plugin-badge": "^0.8.7",
         "cordova-plugin-device": "^2.0.2",
+        "cordova-plugin-local-notification": "^0.9.0-beta.2",
         "cordova-plugin-whitelist": "^1.3.3"
     },
     "cordova": {
         "plugins": {
             "cordova-plugin-whitelist": {},
-            "cordova-plugin-device": {}
+            "cordova-plugin-device": {},
+            "cordova-plugin-local-notification": {}
         },
         "platforms": [
             "android"
